[package]
name = "management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "tls-rustls",
    "migrate",
] }
rocket = { version = "0.5.0", features = ["json"] }
lazy_static = "1.4.0"
getset = "0.1.2"
dotenvy = "0.15.7"
rust-test = "0.1.0"
rocket_cors = "0.6.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
